--- a/package.json
+++ b/package.json
@@ -10,9 +10,28 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "axios": "^0.25",
+        "bootstrap": "^4.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vue": "^2.6.11",
+        "vue-loader": "^15.9.8",
+        "vue-router": "^3.1.6",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "admin-lte": "3.1",
+        "jquery": "^3.6.0",
+        "laravel-vue-pagination": "^2.3.1",
+        "moment": "^2.29.1",
+        "sweetalert2": "^11.3.10",
+        "vform": "^2.1.2",
+        "vue-progressbar": "^0.7.5"
     }
 }
